--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ."
+    "dev": "nodemon .",
+    "start": "node ."
   },
   "author": "JNSAPH",
   "license": "ISC",
