--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon .",
-    "start": "node ."
+    "start": "node server.js"
   },
   "author": "JNSAPH",
   "license": "ISC",
