--- a/TASL Frontend/package.json
+++ b/TASL Frontend/package.json
@@ -23,7 +23,7 @@
     "@nebular/eva-icons": "6.0.0",
     "@nebular/theme": "^6.0.0",
     "eva-icons": "^1.1.2",
-    "rxjs": "~6.5.5",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
