--- a/TASL Backend/package.json
+++ b/TASL Backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.0",
     "shortid": "^2.2.15"
   }
