--- a/TASL Backend/package.json
+++ b/TASL Backend/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.1.0",
     "mongoose": "^5.10.0",
     "shortid": "^2.2.15"
   }
