--- a/TASL Backend/package.json
+++ b/TASL Backend/package.json
@@ -10,13 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "helmet": "^4.1.0",
-    "mongoose": "^5.10.0",
-    "shortid": "^2.2.15"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.0"
   }
 }
