--- a/TASL Backend/config.json
+++ b/TASL Backend/config.json
@@ -1,5 +1,5 @@
 {
-    "username":"123",
-    "password":"123",
+    "username":"admin",
+    "password":"password",
     "secretkey":"h;K)R-bC{k3!wxZVMPp@;*{a^62f-E:?nF,2VZG~%(^>pedR9x[-cNr@9('7%xg{&YanqS"
 }
